--- a/css/style.css
+++ b/css/style.css
@@ -8012,7 +8012,7 @@ h1, h2, h3, h4, h5,
   color: #fda729 !important; }
 
 .bg-top {
-  background: #022d5d; }
+  background: #1683fb; }
 
 .topper {
   font-size: 15px;
@@ -8086,7 +8086,7 @@ h1, h2, h3, h4, h5,
   padding: 0; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #022d5d !important;
+      background: #1683fb !important;
       position: relative;
       top: 0;
       padding: 10px 15px; } }
