--- a/css/style.css
+++ b/css/style.css
@@ -9017,7 +9017,7 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 14px;
-  background: #141313;
+  background: #ffffff;
   padding: 6em 0; }
   .ftco-footer .ftco-footer-widget {
     width: 100%;
@@ -9903,3 +9903,6 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+
+    
