--- a/css/style.css
+++ b/css/style.css
@@ -9017,7 +9017,7 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 14px;
-  background: #ffffff;
+  background: #333333;
   padding: 6em 0; }
   .ftco-footer .ftco-footer-widget {
     width: 100%;
