--- a/css/style.css
+++ b/css/style.css
@@ -288,9 +288,9 @@ NAVIGATION
 	-o-transition: all 0.5s;
 	transition: all 0.5s;
 	background-repeat: repeat-x;
-	background-image: -webkit-linear-gradient(20deg, rgba(98, 34, 198, 0.7) 20%, rgba(51, 119, 222, 0.75) 90%);
-	background-image: -o-linear-gradient(20deg, rgba(98, 34, 198, 0.7) 20%, rgba(51, 119, 222, 0.75) 90%);
-	background-image: linear-gradient(20deg, rgba(98, 34, 198, 0.7) 20%, rgba(51, 119, 222, 0.75) 90%);
+	background-image: -webkit-linear-gradient(20deg, #fbff00 20%, #0ba14b 90%);
+	background-image: -o-linear-gradient(20deg, #0ba14b 20%, #0ba14b 90%);
+	background-image: linear-gradient(20deg, #0ba14b 20%, #fbff00 90%);
 	color: #ffffff;
 	width: 40px;
 	height: 40px;
