--- a/css/style.css
+++ b/css/style.css
@@ -739,9 +739,9 @@ COUNTER SECTION
 	background-size: cover;
 }
 .css-overlay {
-    background-image: -webkit-linear-gradient(20deg, rgba(98, 34, 198, 0.5) 20%, rgba(51, 119, 222, 0.75) 90%);
-	background-image: -o-linear-gradient(20deg, rgba(98, 34, 198, 0.5) 20%, rgba(51, 119, 222, 0.75) 90%);
-	background-image: linear-gradient(20deg, rgba(98, 34, 198, 0.5) 20%, rgba(51, 119, 222, 0.75) 90%);
+    background-image: -webkit-linear-gradient(20deg, rgb(11, 162, 76) 20%, #3377debf 90%);
+	background-image: -o-linear-gradient(20deg, rgb(11, 161, 75) 20%, #3377debf 90%);
+	background-image: linear-gradient(20deg, rgb(11, 162, 76) 20%, rgba(51, 119, 222, 0.75) 90%);
 }
 
 .counter-section strong {
